--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6",
     "reactstrap": "9.1.4"
   },
   "scripts": {
