--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
-    "node-sass": "7.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-router-dom": "6",
-    "reactstrap": "9.1.4"
+    "reactstrap": "^9.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
