--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.1",
+    "@popperjs/core": "2.11.6",
+    "@types/react": ">=16.14.8",
+    "bootstrap": "5.2.1",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "reactstrap": "^9.1.4"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
